--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
     <title>Broadway Design</title>
   </head>
   <body>
-
+    <div id="header">
+      <h1>Broadway Design</h1>
+      <a href="./index.html">Home</a>
+      <a href="./index.html">About</a>
+      <a href="./index.html">Work</a>
+      <a href="./index.html">Team</a>
+      <a href="./index.html">Contact</a>
+    </div>
+    <div id="process">
+      <h2>Our Process</h2>
+      <p><img src="./resources/images/identify.svg"></p>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <p><img src="./resources/images/understand.svg"></p>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <p><img src="./resources/images/execute.svg"></p>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+    <div id="details">
+      <h2 class="designed">Designed in New York</h2>
+      <h3>Portfolio</h3>
+      <p>Coming soon</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555<br>Email: test@example.com<br>Twitter: @test</p>
+    </div>
+    <div id="footer">
+      <p class="navbar">&copy; Broadway 2016
+        <a href="./index.html">Home</a>
+        <a href="./index.html">About</a>
+        <a href="./index.html">Work</a>
+        <a href="./index.html">Team</a>
+        <a href="./index.html">Contact</a></p>
+      </div>
   </body>
 </html>
