Updated HTML (Fixed header links).

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <div id="header">
       <h1>Broadway Design</h1>
-      <a href="./index.html">Home</a>
-      <a href="./index.html">About</a>
-      <a href="./index.html">Work</a>
-      <a href="./index.html">Team</a>
+      <a href="./index.html">Home</a><br>
+      <a href="./index.html">About</a><br>
+      <a href="./index.html">Work</a><br>
+      <a href="./index.html">Team</a><br>
       <a href="./index.html">Contact</a>
     </div>
     <div id="process">
