Updated HTML (Fixed header links again).

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <div id="header">
       <h1>Broadway Design</h1>
-      <a href="./index.html">Home</a><br>
+      <p><a href="./index.html">Home</a><br>
       <a href="./index.html">About</a><br>
       <a href="./index.html">Work</a><br>
       <a href="./index.html">Team</a><br>
-      <a href="./index.html">Contact</a>
+      <a href="./index.html">Contact</a></p>
     </div>
     <div id="process">
       <h2>Our Process</h2>
