--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/css/style.css" type="text/css" rel"stylesheet">
+    <link href="./resources/css/style.css" style="text/css" rel="stylesheet">
     <title>Broadway Design</title>
   </head>
   <body>
-    <div id="header">
-      <h1>Broadway Design</h1>
-      <p><a href="./index.html">Home</a><br>
-      <a href="./index.html">About</a><br>
-      <a href="./index.html">Work</a><br>
-      <a href="./index.html">Team</a><br>
-      <a href="./index.html">Contact</a></p>
+    <div id="top">
+      <h1 class="header">Broadway Design</h1>
+      <p id="links"><a href="./index.html">Home</a></p>
+      <p id="links"><a href="./index.html">About</a></p>
+      <p id="links"><a href="./index.html">Work</a></p>
+      <p id="links"><a href="./index.html">Team</a></p>
+      <p id="links"><a href="./index.html">Contact</a></p>
     </div>
     <div id="process">
       <h2>Our Process</h2>
