Finished final draft.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h3>Team</h3>
       <p>We're Hiring!</p>
       <h3>Contact</h3>
-      <p>Phone: (555)-555-5555<br>Email: test@example.com<br>Twitter: @test</p>
+      <p>Phone: (555)-555-5555<br><br>Email: test@example.com<br><br>Twitter: @test</p>
     </div>
     <div id="footer">
       <p class="navbar">&copy; Broadway 2016
