Submitted final version.

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </div>
     <div id="footer">
       <p class="navbar">&copy; Broadway 2016
-        <a href="./index.html">Home</a>
-        <a href="./index.html">About</a>
-        <a href="./index.html">Work</a>
-        <a href="./index.html">Team</a>
-        <a href="./index.html">Contact</a></p>
+        <a id="links" href="./index.html">Home</a>
+        <a id="links" href="./index.html">About</a>
+        <a id="links" href="./index.html">Work</a>
+        <a id="links" href="./index.html">Team</a>
+        <a id="links" href="./index.html">Contact</a></p>
       </div>
   </body>
 </html>
